# lab8

./: CMakeLists.txt  Doxyfile  README.md  client.c  server.c
html/: annotated.html  classes.html  dir_000006_000005.html  dir_2ec9637163256a7d16b467c41b7a26b6.html  dir_450824ccfc67735631a12c7ba6ee0d69.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_c7f22382b573e7eae906829a8128a7b2.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  globals.html  globals_func.html  matan_8h.html  matan_8h__dep__incl.map  matan_8h__dep__incl.md5  matan_8h__incl.md5  matan_8h_source.html  request_8h.html  request_8h__incl.map  request_8h__incl.md5  request_8h_source.html  structRequest-members.html  structRequest.html  structmatan-members.html  structmatan.html
html/search/: all_0.js  all_2.js  all_3.js  all_4.js  classes_0.js  files_0.js  functions_1.js  searchdata.js
include/: fileWork.h  matan.h  request.h
latex/: annotated.tex  dir_2ec9637163256a7d16b467c41b7a26b6.tex  dir_450824ccfc67735631a12c7ba6ee0d69.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  matan_8h.tex  matan_8h__dep__incl.md5  matan_8h__incl.md5  refman.tex  request_8h.tex  request_8h__incl.md5  structRequest.tex  structmatan.tex
src/: fileWork.c  matan.c  request.c
